@@ -153,7 +153,7 @@ class NotesApiController extends Controller {
 		$response->addHeader('Access-Control-Allow-Origin', $origin);
 		$response->addHeader('Access-Control-Allow-Methods', 
 			'PUT, POST, GET, DELETE');
-		$response->addHeader('Access-Control-Allow-Credentials', 'true');
+		$response->addHeader('Access-Control-Allow-Credentials', 'false');
 		$response->addHeader('Access-Control-Max-Age', '1728000');
 		$response->addHeader('Access-Control-Allow-Headers', 
 			'Authorization, Content-Type');
