@@ -346,7 +346,7 @@ class NotesApiControllerTest extends ControllerTestUtility {
 
 		$this->assertEquals('*', $headers['Access-Control-Allow-Origin']);
 		$this->assertEquals('PUT, POST, GET, DELETE', $headers['Access-Control-Allow-Methods']);
-		$this->assertEquals('true', $headers['Access-Control-Allow-Credentials']);
+		$this->assertEquals('false', $headers['Access-Control-Allow-Credentials']);
 		$this->assertEquals('Authorization, Content-Type', $headers['Access-Control-Allow-Headers']);
 		$this->assertEquals('1728000', $headers['Access-Control-Max-Age']);
 	}
